// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  <div
    class="Ticket__Wrapper-sc-16qon89-1 lLgEg"
    data-testid="reservation__ticket--container"
  >
    <div
      class="Ticket__PunchHole-sc-16qon89-0 gIogyp"
    />
    <div
      class="Ticket__Content-sc-16qon89-2"
    >
      <h1
        class="typography__H1-sc-yczr8v-4 Ticket__Title-sc-16qon89-3 bUDxeD hHhVbN"
        data-test="reservation__title"
      >
        Ticket title
      </h1>
      <div
        class="Ticket__Price-sc-16qon89-6 ilVEgG"
        data-testid="reservation__price--container"
      >
        <div
          class="Ticket__PriceRow-sc-16qon89-7 bhMqie"
        >
          <div>
            <span
              class="typography__Strongish-sc-yczr8v-1 jipjPt"
            >
              reservations:reservationDuration
            </span>
          </div>
          <div />
        </div>
        <div
          class="Ticket__PriceRow-sc-16qon89-7 bhMqie"
        >
          <div>
            <span
              class="typography__Strongish-sc-yczr8v-1 jipjPt"
            >
              prices:total
            </span>
          </div>
          <div>
            <span
              class="typography__Strongish-sc-yczr8v-1 jipjPt"
            >
              prices:priceFree
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Ticket__PunchHole-sc-16qon89-0 gIogyp"
    />
  </div>
</DocumentFragment>
`;

exports[`renders correctly 2`] = `
<DocumentFragment>
  <div
    class="Ticket__Wrapper-sc-16qon89-1 eOXurf"
    data-testid="reservation__ticket--container"
  >
    <div
      class="Ticket__PunchHole-sc-16qon89-0 gIogyp"
    />
    <div
      class="Ticket__Content-sc-16qon89-2"
    >
      <h1
        class="typography__H1-sc-yczr8v-4 Ticket__Title-sc-16qon89-3 bUDxeD hHhVbN"
        data-test="reservation__title"
      >
        Ticket title
      </h1>
      <div
        class="Ticket__Price-sc-16qon89-6 ilVEgG"
        data-testid="reservation__price--container"
      >
        <div
          class="Ticket__PriceRow-sc-16qon89-7 bhMqie"
        >
          <div>
            <span
              class="typography__Strongish-sc-yczr8v-1 jipjPt"
            >
              reservations:reservationDuration
            </span>
          </div>
          <div />
        </div>
        <div
          class="Ticket__PriceRow-sc-16qon89-7 bhMqie"
        >
          <div>
            <span
              class="typography__Strongish-sc-yczr8v-1 jipjPt"
            >
              prices:total
            </span>
          </div>
          <div>
            <span
              class="typography__Strongish-sc-yczr8v-1 jipjPt"
            >
              prices:priceFree
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Ticket__PunchHole-sc-16qon89-0 gIogyp"
    />
  </div>
</DocumentFragment>
`;

exports[`renders correctly 3`] = `
<DocumentFragment>
  <div
    class="Ticket__Wrapper-sc-16qon89-1 eOXurf"
    data-testid="reservation__ticket--container"
  >
    <div
      class="Ticket__PunchHole-sc-16qon89-0 gIogyp"
    />
    <div
      class="Ticket__Content-sc-16qon89-2"
    >
      <h1
        class="typography__H1-sc-yczr8v-4 Ticket__Title-sc-16qon89-3 bUDxeD hHhVbN"
        data-test="reservation__title"
      >
        Ticket title
      </h1>
      <div
        class="Ticket__Price-sc-16qon89-6 iRiYIP"
        data-testid="reservation__price--container"
      >
        <span
          class="typography__Strongish-sc-yczr8v-1 jipjPt"
        >
          reservationUnit:priceFree
        </span>
      </div>
    </div>
    <div
      class="Ticket__PunchHole-sc-16qon89-0 gIogyp"
    />
  </div>
</DocumentFragment>
`;

exports[`renders correctly 4`] = `
<DocumentFragment>
  <div
    class="Ticket__Wrapper-sc-16qon89-1 iwnydW"
    data-testid="reservation__ticket--container"
  >
    <div
      class="Ticket__PunchHole-sc-16qon89-0 EkbHM"
    />
    <div
      class="Ticket__Content-sc-16qon89-2"
    >
      <h1
        class="typography__H1-sc-yczr8v-4 Ticket__Title-sc-16qon89-3 bUDxeD hHhVbN"
        data-test="reservation__title"
      >
        Backgstage huone
      </h1>
      <h2
        class="typography__H2-sc-yczr8v-5 Ticket__Subtitle-sc-16qon89-4 bJTEPT hkZgxB"
      >
        Arabianrannan nuorisotalo
      </h2>
      <div
        class="Ticket__Duration-sc-16qon89-5 qbsUd"
        data-test="reservation__time-range"
      >
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h24v24H0z"
            />
            <path
              d="M17 2a1 1 0 011 1v1h4v17H2V4h4V3a1 1 0 112 0v1h8V3a1 1 0 011-1zm3 9H4v8h16v-8zm0-5H4v3h16V6z"
              fill="currentColor"
            />
          </g>
        </svg>
        <span>
          Common:dateWithWeekday common:timeWithPrefix - common:time 
          <span
            class="util__NoWrap-sc-5wh4ks-2 jbues"
          >
            (common:duration)
          </span>
        </span>
      </div>
      <div
        class="Ticket__Price-sc-16qon89-6 iRiYIP"
        data-testid="reservation__price--container"
      >
        <span
          class="typography__Strongish-sc-yczr8v-1 jipjPt"
        >
          reservationUnit:priceFree
        </span>
      </div>
    </div>
    <div
      class="Ticket__PunchHole-sc-16qon89-0 EkbHM"
    />
  </div>
</DocumentFragment>
`;
